[metadata]
name = a3kazoo
version = attr: a3kazoo.__version__
url = https://github.com/three-kinds/a3kazoo
author = three-kinds
author_email = 3179158552@qq.com
description = It is just a thin wrapper of kazoo.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://github.com/three-kinds/a3kazoo
    Source = https://github.com/three-kinds/a3kazoo

[options]
python_requires = >=3.8
packages = a3kazoo
include_package_data = true
zip_safe = false
install_requires =
    a3py >= 0.1.8
    kazoo >= 2.10.0
